# sea-orm-rocket-starter

./: Cargo.toml  README.md  Rocket.toml
.github/workflows/: rust.yml
src/: bakery_chain.rs  lib.rs  main.rs  setup.rs
src/app/: mod.rs
src/app/bakeries/: bakery.rs  handler.rs  mod.rs
src/app/bakers/: baker.rs  handler.rs  mod.rs
src/app/cakes/: cake.rs  handler.rs  mod.rs
src/app/cakes_bakers/: mod.rs
src/app/customers/: customer.rs  handler.rs
src/app/db/migrations/: mod.rs
src/app/lineitems/: handler.rs  lineitem.rs
src/app/orders/: handler.rs  order.rs
src/db/: mod.rs
src/db/migrations/: mod.rs
src/db/pool/: mod.rs
src/db/seed/: mod.rs
src/domain/: mod.rs
src/domain/bakeries/: bakery.rs  mod.rs
src/domain/bakeries/handlers/: mod.rs
src/domain/bakers/: baker.rs  handler.rs  mod.rs
src/domain/bakers/handlers/: mod.rs
src/domain/cakes/: cake.rs  handler.rs  mod.rs
src/domain/cakes_bakers/: mod.rs
src/domain/customers/: customer.rs  handler.rs  mod.rs
src/domain/lineitems/: handler.rs  lineitem.rs  mod.rs
src/domain/orders/: handler.rs  mod.rs  order.rs
src/lil_lib/: mod.rs
src/lil_lib/bakeries/: bakery.rs
src/lil_lib/bakers/: baker.rs
src/lil_lib/bakery_chain/: cake.rs  mod.rs
src/lil_lib/cakes/: cake.rs  handler.rs
src/lil_lib/cakes_bakers/: mod.rs
src/lil_lib/customers/: customer.rs  mod.rs
src/lil_lib/lineitems/: lineitem.rs  mod.rs
src/lil_lib/orders/: order.rs
src/lil_lib/setup/: mod.rs
src/setup/: schema.rs
tests/: bakeries_test.rs  bakers_test.rs  common.rs  mod.rs
tests/bakeries_test/: mod.rs
tests/bakers_test/: mod.rs
tmp/: seed.rs
