[package]
name = "sea_orm_rocket_starter"
version = "0.1.0"
edition = "2018"
default-run = "main"

[lib]
name = "sea_orm_rocket_starter"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
async-stream = { version = "^0.3" }
async-trait = { version = "0.1" }
chrono = { version = "^0.4.19", features = ["serde"] }

figment = "0.10.6"

futures = { version = "^0.3" }
futures-util = { version = "^0.3" }

rocket = { version = "0.5.0-rc.1", features = [
  "json",
] }

rust_decimal = { version = "^1" }
rust_decimal_macros = { version = "^1" }

sea-orm-rocket = { version = "0.1.0-rc.1", git = "https://github.com/SeaQL/sea-orm.git" }
sea-orm = { version = "^0.5.0-rc.1", features = [
  "macros",
  "runtime-tokio-native-tls",
], default-features = false }
serde_json = { version = "^1" }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "*"

[features]
default = ["sqlx-postgres", "sqlx-sqlite"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]
sqlx-sqlite = ["sea-orm/sqlx-sqlite"]
